# bili_ticket_rush

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
backend/: Cargo.toml
backend/src/: api.rs  ctoken.rs  lib.rs  show_orderlist.rs  task_manager.rs
cli/: Cargo.toml
cli/src/: account.rs  main.rs
common/: Cargo.toml
common/src/: account.rs  captcha.rs  cookie_manager.rs  http_utils.rs  lib.rs  login.rs  push.rs  record_log.rs  task_manager.rs  ticket.rs  utility.rs  utils.rs  web_ck_obfuscated.rs
frontend/: Cargo.toml
frontend/resources/: bilibili_util.cp312-win_amd64.pyd  bilibili_util.cp313-win_amd64.pyd
frontend/src/: app.rs  main.rs  resources.rs
frontend/src/ui/: error_banner.rs  fonts.rs  sidebar.rs
frontend/src/ui/tabs/: account.rs  help.rs  home.rs  monitor.rs  settings.rs
frontend/src/windows/: add_buyer.rs  confirm_ticket.rs  confirm_ticket2.rs  login_windows.rs  mod.rs  screen_info.rs  show_orderlist.rs
